# CogWSL

./: COGNITIVE_IMPLEMENTATION_SUMMARY.md
doc/: mkdocs.yml
doc/docs/: cognitive-framework.md
src/shared/: CMakeLists.txt
src/shared/cognitive/: CMakeLists.txt  cognitive.cpp  standalone_cognitive_test.cpp  standalone_test  test_cognitive.cpp  wsl_cognitive_integration.cpp
src/shared/inc/: cognitive.h  wsl_cognitive_integration.h
